<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_ground_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/title_color"
            android:gravity="center"
            android:text="@string/set_password_title"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/relativeLayout_register_set_password_back"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_black" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_register_set_password"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="36dip"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/et_set_password"
                android:inputType="numberPassword"
                android:paddingLeft="25dip"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/view_color" />

            <EditText
                android:id="@+id/et_register_set_password_affirm"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@color/white"
                android:ems="10"
                android:inputType="numberPassword"
                android:paddingLeft="25dip"
                android:hint="@string/et_set_password_affirm"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_register_set_password_submit"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="18dip"
                android:layout_marginRight="18dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/btn_green"
                android:text="@string/btn_set_password_submit"
                android:textColor="@color/title_color"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>