<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_ground_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/reset_password_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/relativeLayout_reset_password_verification_back"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_black" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/relativeLayout_reset_password_verification_code"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@color/title_color"
                android:layout_marginTop="36dip"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:hint="@string/tv_register_verification_country"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:hint="@string/tv_register_verification_country_code"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/view_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@color/title_color"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tv_reset_password_verification_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dip"
                    android:hint="@string/tv_register_verification_phone"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_reset_password_verification_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@id/tv_reset_password_verification_phone"
                    android:background="@null"
                    android:inputType="phone" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@color/title_color"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:hint="@string/tv_register_verification"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_reset_password_verification_code"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dip"
                    android:layout_weight="3"
                    android:background="@null"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/tv_reset_password_verification_get"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8"
                    android:background="@color/green"
                    android:gravity="center"
                    android:text="@string/tv_register_verification_obtian"
                    android:textColor="@color/title_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_reset_password_verification_next"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="18dip"
                android:layout_marginRight="18dip"
                android:layout_marginTop="70dip"
                android:background="@drawable/btn_green"
                android:text="@string/register_name_next"
                android:textColor="@color/title_color"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>