<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/title_color"
            android:gravity="center"
            android:text="@string/register_title"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/relativeLayout_register_name_back"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_black" />
        </RelativeLayout>
    </RelativeLayout>

    <hbie.vip.parking.ui.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_ground_color"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dip" >

                <hbie.vip.parking.ui.RoundImageView
                    android:id="@+id/iv_resister_name_head"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:layout_alignParentBottom="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/regiser_head" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dip"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/btn_register_name_man"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:background="@drawable/btn_man" />

                <Button
                    android:id="@+id/btn_register_name_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="17.33dp"
                    android:layout_toRightOf="@+id/btn_register_name_man"
                    android:background="@drawable/btn_woman" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_register_name"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="40dip"
                android:background="@color/white"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/et_register_name"
                android:inputType="textPersonName"
                android:paddingLeft="25dip"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>



            <Button
                android:id="@+id/btn_register_name_next"
                android:layout_width="wrap_content"
                android:layout_height="60dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="50dip"
                android:background="@drawable/btn_green"
                android:text="@string/register_name_next"
                android:textColor="@color/title_color"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dip"
                android:layout_marginTop="60dip"
                android:gravity="center"
                android:text="@string/service_next"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_register_name_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:layout_marginTop="15dip"
                android:gravity="center"
                android:text="@string/service"
                android:textColor="@color/green"
                android:textSize="14sp" />
        </LinearLayout>
    </hbie.vip.parking.ui.ReboundScrollView>

</LinearLayout>