<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_ground_color"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="36.67dip"
                android:background="@color/white"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_login_areaCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:text="@string/areaCode"
                        android:textSize="18sp" />



                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dip"
                        android:layout_marginLeft="14dip"
                        android:layout_marginTop="4dip"
                        android:src="@drawable/xiegan"
                        android:contentDescription="@string/app_name" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_login_phone"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:inputType="phone" >
                </EditText>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@color/white"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:text="@string/password"
                        android:textSize="18sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login_submit"
                android:layout_width="wrap_content"
                android:layout_height="60dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="32dip"
                android:background="@drawable/btn_green"
                android:text="@string/login"
                android:textColor="@color/title_color"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="20dip"
                android:layout_marginTop="52dip"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/forget_pwd"
                android:textColor="@color/appcolor"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dip"
                android:layout_marginBottom="15dip"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/tv_login_ask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_ask" />

                <TextView
                    android:id="@+id/tv_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/tv_login_ask"
                    android:text="@string/register"
                    android:textColor="@color/appcolor"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>